--- a/little-lemon/package.json
+++ b/little-lemon/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.8",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
@@ -32,6 +33,6 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.1"
   }
 }
